fixed banner img width on safari

--- a/assets/sass/setup/_normalize.scss
+++ b/assets/sass/setup/_normalize.scss
@@ -5,4 +5,7 @@
   margin: 0;
 }
 
-img { width: 100%; }
+img {
+  display: block;
+  width: 100%;
+}
